update JWT
